--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,12 +38,11 @@ section#telefone {
 }
 
 iframe {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 470px;
-    width: 269px; 
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width: 267px; 
 }
 
 #redes-sociais {
