--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,7 @@ section#telefone {
 
 }
 
-iframe {
+iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
@@ -45,14 +45,23 @@ iframe {
     width: 267px; 
 }
 
-#redes-sociais {
+section#redes-sociais {
     display: grid;
     justify-content: right;
 }
 
-.img {
+section#redes-sociais img {
     border-radius: 50%;
     width: 50px;
-    padding: 10px;
-}   
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.406);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.612);
+    transform: translate(-3px,-3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.607);
+    transition: .5s border .1s;
+}
 
